completed framework for Save&Load  - need to complete a TODO on line 240 (header.c)
added utils library for odds and ends

edited main task struct to reflect what we want to store

--- a/Task List/Task List.vcxproj.filters
+++ b/Task List/Task List.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="header.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="utils.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
