--- a/Task List/Task List.vcxproj
+++ b/Task List/Task List.vcxproj
@@ -135,6 +135,9 @@
     <ClInclude Include="header.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="tasks.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
